--- a/CandyCrush/readme
+++ b/CandyCrush/readme
@@ -1,2 +1,2 @@
 
-In class project where we created a game that plays similar to candy crush but from the command line. Written in C.
+In class project where I created a game that plays similar to candy crush but from the command line. Written in C. Includes header files, make files, and driver code. 
